# fastapi-examples

./: .gitignore
detect-server/: README.md  pyproject.toml
detect-server/detect_server/: main.py
detect-server/detect_server/algorithms/_cv2/test/: startup.py
hotfix-client/: README.md  pyproject.toml
hotfix-server/: README.md  pyproject.toml
hotfix-server/hotfix_server/: main.py  utils.py
hotfix-server/scripts/: readme.md  startup.ps1  startup.sh
